added a flip effect

--- a/index.html
+++ b/index.html
@@ -11,18 +11,46 @@
             <span id=timer></span>
         </div>
         <div id="container">
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
-            <div class="memCard"></div>
+            <div class="memCard">
+                <img class="front" src="img/react.svg" alt="React">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="front" src="img/react.svg" alt="React">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="front" src="img/angular.svg" alt="Angular">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="front" src="img/angular.svg" alt="Angular">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
         </div>
         <script src="app.js"></script>
     </body>
