added some basic functionality

--- a/index.html
+++ b/index.html
@@ -11,32 +11,36 @@
             <span id=timer></span>
         </div>
         <div id="container">
-            <div class="memCard">
+            <div class="memCard" data-framework="react">
                 <img class="front" src="img/react.svg" alt="React">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="react">
                 <img class="front" src="img/react.svg" alt="React">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="angular">
                 <img class="front" src="img/angular.svg" alt="Angular">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="angular">
                 <img class="front" src="img/angular.svg" alt="Angular">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="node">
+                <img class="front" src="img/nodejs.svg" alt="Node">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="node">
+                <img class="front" src="img/nodejs.svg" alt="Node">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="vue">
+                <img class="front" src="img/vuejs.svg" alt="Vue">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="vue">
+                <img class="front" src="img/vuejs.svg" alt="Vue">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
             <div class="memCard">
