--- a/index.html
+++ b/index.html
@@ -27,32 +27,36 @@
                 <img class="front" src="img/angular.svg" alt="Angular">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard" data-framework="node">
-                <img class="front" src="img/nodejs.svg" alt="Node">
+            <div class="memCard" data-framework="aurelia">
+                <img class="front" src="img/aurelia.svg" alt="Aurelia">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard" data-framework="node">
-                <img class="front" src="img/nodejs.svg" alt="Node">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="vue">
-                <img class="front" src="img/vuejs.svg" alt="Vue">
+            <div class="memCard" data-framework="aurelia">
+                <img class="front" src="img/aurelia.svg" alt="Aurelia">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
             <div class="memCard" data-framework="vue">
                 <img class="front" src="img/vuejs.svg" alt="Vue">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="vue">
+                <img class="front" src="img/vuejs.svg" alt="Vue">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="ember">
+                <img class="front" src="img/ember.svg" alt="Ember">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="ember">
+                <img class="front" src="img/ember.svg" alt="Ember">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
-            <div class="memCard">
+            <div class="memCard" data-framework="meteor">
+                <img class="front" src="img/meteor.svg" alt="Meteor">
+                <img class="back" src="img/javascript.svg" alt="JS">
+            </div>
+            <div class="memCard" data-framework="meteor">
+                <img class="front" src="img/meteor.svg" alt="Meteor">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
         </div>
