rearranged code into classes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <span id=timer></span>
         </div>
         <div id="container">
-            <div class="memCard" data-framework="react">
+            <!-- <div class="memCard" data-framework="react">
                 <img class="front" src="img/react.svg" alt="React">
                 <img class="back" src="img/javascript.svg" alt="JS">
             </div>
@@ -58,8 +58,11 @@
             <div class="memCard" data-framework="meteor">
                 <img class="front" src="img/meteor.svg" alt="Meteor">
                 <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
+            </div> -->
         </div>
-        <script src="app.js"></script>
+        <script src="game.js" deref></script>
+        <script src="timer.js" deref></script>
+        <script src="card.js" deref></script>
+        <script src="app.js" deref></script>
     </body>
 </html>
