--- a/index.html
+++ b/index.html
@@ -11,54 +11,7 @@
             <span id=timer></span>
         </div>
         <div id="container">
-            <!-- <div class="memCard" data-framework="react">
-                <img class="front" src="img/react.svg" alt="React">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="react">
-                <img class="front" src="img/react.svg" alt="React">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="angular">
-                <img class="front" src="img/angular.svg" alt="Angular">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="angular">
-                <img class="front" src="img/angular.svg" alt="Angular">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="aurelia">
-                <img class="front" src="img/aurelia.svg" alt="Aurelia">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="aurelia">
-                <img class="front" src="img/aurelia.svg" alt="Aurelia">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="vue">
-                <img class="front" src="img/vuejs.svg" alt="Vue">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="vue">
-                <img class="front" src="img/vuejs.svg" alt="Vue">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="ember">
-                <img class="front" src="img/ember.svg" alt="Ember">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="ember">
-                <img class="front" src="img/ember.svg" alt="Ember">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="meteor">
-                <img class="front" src="img/meteor.svg" alt="Meteor">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div>
-            <div class="memCard" data-framework="meteor">
-                <img class="front" src="img/meteor.svg" alt="Meteor">
-                <img class="back" src="img/javascript.svg" alt="JS">
-            </div> -->
+            <!-- dynamicaly adding divs and images (originally it was static) -->
         </div>
         <script src="game.js" deref></script>
         <script src="timer.js" deref></script>
