--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id="header">
+            <button id = "reset">Reset</button>
             <h2>Memory Game</h2>
             <span id=timer></span>
         </div>
