added easy and hard mode - TODO: need to dynamicaly adjust w and h of cards

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <div id="header">
             <button id = "reset">Reset</button>
+            <button id = "easy">Easy</button>
+            <button id = "hard">Hard</button>
             <h2>Memory Game</h2>
             <span id=timer></span>
         </div>
