adjusted button and timer centering

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <body>
         <div id="header">
             <h2>Memory Game</h2>
-            <span id=timer></span>
-            <button id = "reset">Reset</button>
-            <button id = "easy">Easy</button>
-            <button id = "hard">Hard</button>
-
+            <div id = "addons">
+                <button id = "reset">Reset</button>
+                <span id=timer></span>
+                <div id = "modes">
+                    <button id = "easy">Easy</button>
+                    <button id = "hard">Hard</button>
+                </div>
+            </div>
         </div>
         <div id="container">
             <!-- dynamicaly adding divs and images (originally it was static) -->
