added some comments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div id = "addons">
                 <button id = "reset">Reset</button>
                 <span id=timer></span>
-                <div id = "modes">
+                <div id = "modes"> <!--grouped buttons so it was easier to position-->
                     <button id = "easy">Easy</button>
                     <button id = "hard">Hard</button>
                 </div>
