--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <div id = "modes"> <!--grouped buttons so it was easier to position-->
                     <button id = "easy">Easy</button>
                     <button id = "hard">Hard</button>
+                    <a href="http://localhost:3000" target="_parent"><button>Leaderboard</button></a>
                 </div>
             </div>
         </div>
